avoid overlapping the info icon

--- a/stanzas/annotation-keyvalue/style.scss
+++ b/stanzas/annotation-keyvalue/style.scss
@@ -88,6 +88,7 @@
     }
   }
   .legend {
+    padding-right: 15px;
     .legend-bar {
       width: 70px;
       height: 5px;
