--- a/stanzas/heatmap-table/style.scss
+++ b/stanzas/heatmap-table/style.scss
@@ -219,7 +219,7 @@ img {
       }
     }
     .legend {
-      margin-right: 15px;
+      margin-right: 30px;
       .legend-bar {
         width: 100px;
         height: 7px;
